  * Colors used for highlighting can be set in page 3 of the preferences dialog.
  * The chat sidebar can be shown/hidden with F4.
  * You can disable automatic scrolling of the chat window by clicking in the
    window. Same for the DX window.
  * Parse of the DX cluster output has been improved. Xdx would sporadically
    miss DX messages.
  * A new about dialog has been added.
  * The manual now uses monospace font. It is now activated with F1.
  * Auto reconnect has been added. When activated through the settings menu,
    xdx will try to reconnect when the connection is broken. This code is
    somewhat experimental....
  * To keep track of your connections a connection log is kept. It can be
    viewed from the menu (Ctrl+l).
  * Xdx can send a keepalive packet every 5 minutes, which is useful for
    bad network connections. You must activate it in the settings dialog.
  * Sound support has been added. When a highlight is active in the chat
    window, a sound can be heard. You must use another program to play sound
    and set it in the first page of the preferences dialog.
  * Both ON4KST and DX-cluster prompts in the chat window are now colorized.
    The callsign is bold.
  * All of the colors in the chat window are now configurable.

Changelog for version xdx (1.2)

  * Fixed compilation against GTK+ version 2.4.
  * Added spanish translations and manual by Baltasar Perez, EB8AKF. Thanks!
  * A new option added to the preferences dialog which allows showing/hiding
    of columns in the spots window.

Changelog for version xdx (1.1)
  * Correctly save preferences and history when selecting program->exit from
    the menu. This bug was reported by Wilbert Knol ZL2BSJ, thanks!
  * Set the cursor after the entry when recalling history of the command line.

Changelog for version xdx (1.0)

  * A preferences dialog has been added.
  * A URL in the chat window will now appear blue and underlined when your