@@ -51,7 +51,7 @@ void openurl (const char *url);
 void openmail (const char *url);
 void opensound (const char *file);
 gchar *try_utf8 (const gchar *str);
-gchar *getdate (void);
-gchar *gettime (void);
+gchar *getdate (gboolean formatted);
+gchar *gettime (gboolean formatted);
 void logconnection (GString *logstr);
 gchar *my_strreplace(const char *str, const char *delimiter, const char *replacement);
